Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -197,7 +197,7 @@ a jablečným pyré 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-None
+<ol><li>Thajske cervene kari s kousky rybich filetu, zeleninou, kokosovym mlekem a gaj coj, jasminova ryze 139</li><li>Peceny filet z cerstveho morskeho vlka a lososa s pecenym rajcetem a bazalkovym pestem, pecene brambory, salatek z cervene repy 175</li><li>Burrito s hovezim chilli con carne s palivymi paprikami, chipotle a cervenymi fazolemi, jasminova ryze, okurkove tzatziki, salatek 139</li><li>Italske houbove rizoto s parmezanem a bazantim stehynkem na cervenem vine, salatek 169</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, korenena ryze s beluga cockou, okurkove tzatziki 139</li></ol>
 </td>
 </tr>
 </table>
