Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Kari polévka se zeleninou</strong>
+<strong>Vývar s hráškem a rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Pečená krkovička s krémovou kapustou a šťouchaným bramborem</strong>
+<strong>Vepřový pivní guláš s houskovým knedlíkem nebo rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s asijskými kuřecími stripsy</strong>
+<strong>Sekaná s vařeným bramborem a hořčicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
