--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 02. 10. 2021</h5>
+<h5>Neděle, 03. 10. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Ve dnech 27.-28.9. je jídelna ZAVŘENÁ. Těšíme se na Vás opět ve středu 29.9.</strong>
@@ -57,7 +57,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 2.10.2021</div>
+<div class="nadpis">Neděle 3.10.2021</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -73,10 +73,10 @@
 <h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, dušená jasmínová rýže</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu, pečené brambory s kmínem, česnekový dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony,vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">160g</td><td class="menuName">Smažené řízky z kuřecích prsou obalené v cornflakes a vepřové pečeně obalené ve strouhance, bramborový salát, citron</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Sekaný vepřový biftek z grilu, grilovaná zelenina sypaná parmazánem, sázené vejce</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName"> Steak z vepřové pečeně na smetanové omáčce s pórkem a moravským uzeným, špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, beraní roh, cibule, hořčice, křen, smažené bramborové plátky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí gyros v pšeničné tortille s čerstvou zeleninou, ochucený česnekovým dresinkem, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný bylinkovým dresinkem, dorůžova pečená vepřová panenka, vařené vejce</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí pečeně špikovaná karotkou v rajské omáčce, těstoviny fusilli</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, chlupaté knedlíky, bílé zelí</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený vepřový bok s vaječnou nádivkou s hráškem a kapií, vařené brambory,kyselá okurka</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s klobásou, smažené bramborové plátky, tatarka</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. Vepřové mini roládky plněné vejcem, žampiony a kapií, sýrová omáčka, rajčatový salátek</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Sekaný vepřový biftek na kari s anglickou slaninou a pórkem, špecle</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Steak z vepřové pečeně, sázené vejce na šunce, hranolky, mexický dip</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát z trhaných listů s kuřecím masem,opraženou anglickou slaninou, ančovičkovým dresinkem, česnekové tousty</td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
@@ -153,6 +153,11 @@ a jablečným pyré 1a,3,7</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
