Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 03. 10. 2021</h5>
+<h5>Pondělí, 04. 10. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Ve dnech 27.-28.9. je jídelna ZAVŘENÁ. Těšíme se na Vás opět ve středu 29.9.</strong>
@@ -57,9 +57,48 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 3.10.2021</div>
+<div class="nadpis">Pondělí 4.10.2021</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Tom kha gai, rýžové nudle, zelenina, bylinky v menu <em title="Ryby">4</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tom kha gai, rýžové nudle, zelenina, bylinky samostatně <em title="Ryby">4</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí prso v red curry omáčce, čerstvá zelenina, basmati rýže, koriandr <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřová pečeně, hříbková omáčka, pečené grenaille, baby špenát <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Penne, marinara omáčka, restovaná zelenina, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">139 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>250g Variace bavorských baget <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Domácí dezerty dle denní nabídky </div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -70,16 +109,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
-</table><table class="table">
-<tbody>
 <h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí pečeně špikovaná karotkou v rajské omáčce, těstoviny fusilli</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, chlupaté knedlíky, bílé zelí</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený vepřový bok s vaječnou nádivkou s hráškem a kapií, vařené brambory,kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s klobásou, smažené bramborové plátky, tatarka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. Vepřové mini roládky plněné vejcem, žampiony a kapií, sýrová omáčka, rajčatový salát</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Sekaný vepřový biftek na kari s anglickou slaninou a pórkem, špecle</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Steak z vepřové pečeně, sázené vejce na šunce, hranolky, mexický dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát z trhaných listů s kuřecím masem,opraženou anglickou slaninou, ančovičkovým dresinkem, česnekové tousty</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Těstoviny linguine s bolonským ragú, strouhaný sýr</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, rolované bramborové knedlíky se zauzenou paprikou , dušené bílé zelí</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený nadívaný vepřový bůček, houskové knedlíky, špenát</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dukátová buchtičky s vanilkovým šodo, karamelem a šlehačkou</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Soté z kuřecích prsou s červenou cibulí, paprikou a chilli, smažené bramborové hranolky</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, brokolicové pyré, grilované rajče s parmazánem, vařené vejce</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Smažená vinná klobása, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na fazolových luscích, mačkané brambory s cibulkou a máslem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivovým olejem, plátkovaná vepřová panenka, vařené vejce, parmazán</td><td class="menuPrice">135,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -96,63 +132,43 @@
 <table class="dm">
 <tbody>
 <tr>
+<td class="amount">120g</td>
+<td class="title">Zvěřinová terina s pistáciemi, švestkovým chutney
+a domácím dalamánkem 1ab,7,8g	</td>
+<td class="pricem">155 Kč</td>
+</tr>
+<tr>
 <td class="amount"></td>
-<td class="title">Pivní cibulačka s tyrolským špekem, tymiánem
-a toastem se sýrem Maasdamer	 1ac,7,9</td>
+<td class="title">Dýňový krém s chilli, zázvorem, kokosovým mlékem
+a opraženými semínky 1a,7</td>
 <td class="pricem">69 Kč</td>
 </tr>
 <tr>
-<td class="amount">200g</td>
-<td class="title">FLAMMKUCHEN – bavorský slaný koláč s cibulí, Crème fraîche a slaninou</td>
-<td class="pricem">125 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">TAFELSPITZ 	– 	silný hovězí vývar z karabáčku s kořenovou zeleninou a brambory
-sypaný křenem s hořčicí a naším cibulovým chlebem 1ab,9</td>
-<td class="pricem">195 Kč</td>
-</tr>
-<tr>
 <td class="amount">150g</td>
-<td class="title">Grilované norimberské klobásky se salátem z kysaného zelí, hořčicí, křenem
-		a naším cibulovým chlebem 1ab,10,12</td>
-<td class="pricem">135 Kč</td>
+<td class="title">Pečené buřty na černém pivu se zeleninou, feferonkami a cibulkou,
+		náš cibulový chléb 1abc</td>
+<td class="pricem">139 Kč</td>
 </tr>
 <tr>
-<td class="amount">400g</td>
-<td class="title">Käsespätzle se sýrem, restovanou slaninou, smaženou cibulkou
-a sekanou pažitkou 1a,3,7	</td>
-<td class="pricem">165 Kč</td>
-</tr>
-<tr>
-<td class="amount">250g</td>
-<td class="title">Konfitovaná krkovice a bůček na pivě s demi glace omáčkou, 
-bavorským knedlíkem a salátem z kysaného zelí 1ac,3,9,12</td>
-<td class="pricem">205 Kč</td>
+<td class="amount">200g</td>
+<td class="title">Grilovaný kančí hřbet balený ve slanině
+s máslovou růžičkovou kapustou a celerovým pyré,
+vinná omáčka s jalovcem 1a,7,9,12</td>
+<td class="pricem">249 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Kaiserschmarrn	–	Císařský trhanec pečený na másle se skořicí, badyánem
-a jablečným pyré 1a,3,7</td>
-<td class="pricem">85 Kč</td>
-</tr>
-<tr>
-<td class="amount">1l</td>
-<td class="title">PAULANER MÜNICH BIER</td>
-<td class="pricem">130 Kč</td>
-</tr>
-<tr>
-<td class="amount">0,5l</td>
-<td class="title">PAULANER MÜNICH BIER</td>
-<td class="pricem">70 Kč</td>
-</tr>
-<tr>
-<td class="amount">0,04l</td>
-<td class="title">BARTIDA HRUŠKA WILLIAMS</td>
-<td class="pricem">59 Kč</td>
+<td class="title">Domácí rebarborový koláč s máslovou drobenkou
+a vanilkovým Crème fraîche	</td>
+<td class="pricem">89 Kč</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Zelná bílá s klobásou a brambory 1a,7,12</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hamburská vepřová pečeně na smetaně se šunkou a nakládanou okurkou s našimi houskovými knedlíky 1a,3,7,9,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažená kuřecí kapsa plněná anglickou slaninou a nivou s bramborovou kaší se smaženou cibulkou a sekanou petrželkou, trhaný salát 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Bramborové noky s kousky vepřové panenky, špenátem, smetanou a sýrem Forte Classico 1a,3,7</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
