--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,21 +14,21 @@
 						</span>
 </p>
 <p>
-<strong>Vývar s hráškem a rýží</strong>
+<strong>Tomatová s pestem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřový pivní guláš s houskovým knedlíkem nebo rýží</strong>
+<strong>Hovězí stroganov s jasmínovou rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Sekaná s vařeným bramborem a hořčicí</strong>
+<strong>Uhlířské Špagety se sýrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							125,-
