Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -176,7 +176,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske cervene kari s kousky rybich filetu, zeleninou, kokosovym mlekem a gaj coj, jasminova ryze 139</li><li>Peceny filet z cerstveho morskeho vlka a lososa s pecenym rajcetem a bazalkovym pestem, pecene brambory, salatek z cervene repy 175</li><li>Burrito s hovezim chilli con carne s palivymi paprikami, chipotle a cervenymi fazolemi, jasminova ryze, okurkove tzatziki, salatek ( L ) 139</li><li>Italske houbove rizoto s parmezanem a bazantim stehynkem na cervenem vine, salatek 169</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, korenena ryze s beluga cockou, okurkove tzatziki 139</li></ol>
+<ol><li>Peceny cerstvy pstruh s grilovanym ananasem a petrzelkovym pestem, cockovy salat s paprikami, cuketami a rajcaty 139</li><li>Peceny filet z cerstveho morskeho dasa a tresky s grilovanym ananasem a petrzelkovym pestem, cockovy salat s paprikami, cuketami a rajcaty 175</li><li>Thajske pomalu dusene veprove v arasidove omacce s paprikami a medem, jasminova ryze, salatek 139</li><li>Madarsky srnci paprikas s palivymi slovenskymi paprikami, slaninou a lzici zakysane smetany, chlupate knedliky {L} 165</li><li>Zapecene papriky plnene cervenou cockou s rajcaty, cibulkou a balkanskym syrem, bulgur, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
